<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="359dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/license"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="229dp"
            android:layout_height="177dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/bg"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/closeAbt"
            android:layout_width="73dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_about"
            android:fontFamily="@font/license"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DwnNewVer" />

        <Button
            android:id="@+id/DwnNewVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/button"
            android:fontFamily="@font/license"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/update"
            android:textColorHighlight="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/closeAbt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din"
            android:gravity="center_horizontal"
            android:paddingHorizontal="24dp"
            android:text="@string/about_text"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/DwnNewVer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/DwnNewVer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/share"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="36dp"
                android:contentDescription="Share"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                app:srcCompat="@drawable/share_to"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/telegram"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="36dp"
                android:contentDescription="Support"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                app:srcCompat="@drawable/tg"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/main_ads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
